# Gross-Pitaevskii

./: GPE_Equation.nb  Harmonic_Trap.py  Metropolis_Stochastic.py  README.md  Wave_Equation_Shape.nb  bose.py  pyproject.toml  stochastic.ipynb  testing_solver.py
Archived/: GPESolver.py  testing_solver.py
Archived/Metropolis/: helper_functions.py  stochastic.ipynb
Mathematica NBs/: GPE_Equation.nb
Metropolis/: helper_functions.py  stochastic.ipynb
src/: GPESolver.py  QMSolver.py  foo.py  helper_functions.py  metropolis.py
