[project]
authors = [{ name = "Emmanuel FC", email = "eq.emmanuel.137@gmail.com" }]
dependencies = []
name = "Gross-Pitaevskii"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
gross_pitaevskii = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.2.4,<3"
matplotlib = ">=3.10.1,<4"

[tool.pyright]
venvPath = "."
venv = ".pixi"
